--- a/examples/test-es6.html
+++ b/examples/test-es6.html
@@ -9,15 +9,7 @@
 	<style>html,body{height: 100%; margin: 0; padding:0;}</style>
 </head>
 <body style="margin: 0; padding:0;">
-<div class="gw2map"
-     data-continent-id="2"
-     data-floor-id="3"
-     data-region-id="7"
-     data-events="0"
-     data-zoom="3"
-     data-custom-rect="[[5120, 8192], [16384, 16384]]"
-></div>
-
+<div class="gw2map" data-zoom="3"></div>
 <script type="text/javascript" id="gw2map-script">
 	'use strict';
 
