--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 	</style>
 </head>
 <body>
-<div class="gw2map" data-continent-id="2" data-floor-id="3" data-region-id="7" data-custom-rect="[[5120, 8192], [16384, 16384]]" data-zoom="3"></div>
+<div class="gw2map" data-zoom="3"></div>
 <script type="text/javascript" id="gw2map-script">
 	'use strict';
 
